# celai_community_tools

./: pyproject.toml  requirements.txt
celai_community_tools/: __init__.py  auth.py  errors.py  tool.py
celai_community_tools/providers/: __init__.py  base_provider.py
celai_community_tools/providers/gmail/: __init__.py  auth.py  tools.py
celai_community_tools/providers/utilities/: __init__.py  weather.py
celai_community_tools/providers/web/: __init__.py  firecrawl.py  models.py
